@@ -9,4 +9,7 @@ void str_lower( std::string& );
 std::string to_upper( const std::string& );
 void str_upper( std::string& );
 
+int to_int( const std::string& );
+unsigned int to_uint( const std::string& );
+
 #endif // PATHSPELL_STRMANIP_H
